<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fast_slam</name>
  <version>0.1.0</version>
  <description>
    FastSLAM 1.0 for ROS 2 Humble.
    Implements the FastSLAM 1.0 algorithm (Montemerlo et al., 2002) for
    landmark-based simultaneous localisation and mapping using range-bearing
    observations extracted from a 2-D laser scan.
    Subscribes to /scan and /odom (articubot), publishes particle cloud,
    best-estimate pose, estimated landmark map, and best-particle trajectory.
  </description>
  <maintainer email="you@example.com">Aun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
